[Fix] height for home cards ultra wide, spaces in team page, vertical align home agency section, overlay for hero image

--- a/src/components/agency/agency.module.css
+++ b/src/components/agency/agency.module.css
@@ -5,7 +5,8 @@
   align-items: center;
   background-position: 100% 80%;
   margin: 100px 0 0vh;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-bottom: 50px;
   flex-direction: column;
 }
 
@@ -20,6 +21,16 @@
   border-radius: 50%;
   border: 1px solid #000;
   z-index: -1;
+}
+
+.agencySection:after{
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  background-color: #00000055;
 }
 
 .agencyAbout {
@@ -95,7 +106,7 @@
 .redLine {
   position: relative;
   width: 5px;
-  height: 20vh;
+  height: 150px;
   background-color: #d02e2a;
   z-index: 1;
   margin: 0 auto;
@@ -163,9 +174,16 @@
   .agencyAbout.agencySection {
     margin-bottom: 45vh;
   }
+
+  .redLine{
+    height: 100px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  .redLine{
+    height: 70px;
+  }
   .agencySection {
     height: 60vh;
   }
@@ -185,6 +203,15 @@
 
   .mobileImageHero {
     display: block;
+  }
+  .mobileImageHero:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000045;
   }
   .agencyContainer {
     width: 100%;
