--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -4,6 +4,16 @@
   position: relative;
 }
 
+.heroSection:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000045;
+}
+
 .posterHero {
   margin-bottom: 30vh;
   padding-top: 115px;
@@ -11,6 +21,10 @@
 
 .videoHeroSection {
   height: auto;
+}
+
+.videoHeroSection:before{
+  display: none;
 }
 
 .heroContainer {
@@ -198,6 +212,15 @@
   }
   .mobileImageHero {
     display: block;
+  }
+  .mobileImageHero:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000045;
   }
   .titleHero {
     font-size: 70px;
