--- a/src/components/meetUs/meet-us.module.css
+++ b/src/components/meetUs/meet-us.module.css
@@ -1,5 +1,5 @@
 .meetUsSection {
-  padding: 50px 0;
+  padding: 100px 0 0px;
 }
 
 .meetUsTitle {
@@ -115,9 +115,12 @@
   }
 }
 @media only screen and (max-width: 768px) {
+  .meetUsSection {
+    padding: 50px 0 0;
+  }
   .wrapperMember {
     width: 48%;
-    margin-bottom: 5vh;
+    margin-bottom: 20px;
   }
 
   .wrapperTeam {
